--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<link rel="canonical" href="https://openshift.github.io/pipelines-docs/docs/0.7/index.html">
+<link rel="canonical" href="https://openshift.github.io/pipelines-docs/docs/index.html">
 <script>location="docs/0.7/index.html"</script>
 <meta http-equiv="refresh" content="0; url=docs/0.7/index.html">
 <meta name="robots" content="noindex">
