--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<link rel="canonical" href="https://openshift.github.io/pipelines-docs/docs/index.html">
-<script>location="docs/index.html"</script>
+<link rel="canonical" href="https://openshift.github.io/pipelines-docs/site/index.html">
+<script>location="site/index.html"</script>
 <meta http-equiv="refresh" content="0; url=build/site/index.html">
 <meta name="robots" content="noindex">
 <title>Redirect Notice</title>
