--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <link rel="canonical" href="https://openshift.github.io/pipelines-docs/index.html">
-<script>location="docs/index.html"</script>
-<meta http-equiv="refresh" content="0; url=docs/index.html">
+<script>location="pipelines-docs/index.html"</script>
+<meta http-equiv="refresh" content="0; url=pipelines-docs/index.html">
 <meta name="robots" content="noindex">
 <title>Redirect Notice</title>
 <h1>Redirect Notice</h1>
-<p>The page you requested has been relocated to <a href="docs/0.8/index.html">https://openshift.github.io/pipelines-docs/docs/0.8/index.html</a>.</p>
+<p>The page you requested has been relocated to <a href="docs/0.8/index.html">https://openshift.github.io/pipelines-docs/0.10/index.html</a>.</p>
