--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@
 <meta name="robots" content="noindex">
 <title>Redirect Notice</title>
 <h1>Redirect Notice</h1>
-<p>The page you requested has been relocated to <a href="0.10/index.html">https://openshift.github.io/pipelines-docs/0.10/index.html</a>.</p>
+<p>The page you requested has been relocated to <a href="0.10/index.html">https://openshift.github.io/pipelines-docs/docs/0.10/index.html</a>.</p>
