Deprecate this repo - add warning to readme and redirect to OCP docs.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<link rel="canonical" href="https://openshift.github.io/pipelines-docs/docs/0.10.5/index.html">
-<script>location="docs/0.10.5/index.html"</script>
-<meta http-equiv="refresh" content="0; url=docs/0.10.5/index.html">
-<meta name="robots" content="noindex">
+<meta charset="utf-8" />
+<link
+  rel="canonical"
+  href="https://openshift.github.io/pipelines-docs/docs/0.10.5/index.html"
+/>
+<meta
+  http-equiv="refresh"
+  content="0;url=https://docs.openshift.com/container-platform/latest/pipelines/understanding-openshift-pipelines.html"
+/>
+<meta name="robots" content="noindex" />
 <title>Redirect Notice</title>
 <h1>Redirect Notice</h1>
-<p>The page you requested has been relocated to <a href="docs/0.10.5/index.html">https://openshift.github.io/pipelines-docs/docs/0.10.5/index.html</a>.</p>
+<p>
+  The page you requested has been relocated to
+  <a
+    href="https://docs.openshift.com/container-platform/latest/pipelines/understanding-openshift-pipelines.html"
+    >https://docs.openshift.com/container-platform/latest/pipelines/understanding-openshift-pipelines.html</a
+  >.
+</p>
